Update README.md
Update README.md

Removed lights

remove classes

removed dead code

removed dead code

removed dead code

removed dead code

removed dead code

removed dead code

	new file:   .classpath
	new file:   .factorypath
	new file:   .idea/runConfigurations.xml
	new file:   .project
	new file:   .settings/org.eclipse.core.resources.prefs
	new file:   .settings/org.eclipse.jdt.apt.core.prefs
	new file:   .settings/org.eclipse.jdt.core.prefs
	new file:   .settings/org.eclipse.m2e.core.prefs
	modified:   src/main/resources/Texture/heightmap.png
	new file:   target/classes/Models/Arrow/Arrow5.mtl
	new file:   target/classes/Models/Arrow/Arrow5.obj
	new file:   target/classes/Models/Arrow/Arrow5AO.png
	new file:   target/classes/Models/Arrow/Arrow5Albedo.png
	new file:   target/classes/Models/Arrow/Arrow5Metal.png
	new file:   target/classes/Models/Arrow/Arrow5Normal.png
	new file:   target/classes/Models/Arrow/Arrow5Rough.png
	new file:   target/classes/Models/Arrow/Arrow5UVW.png
	new file:   target/classes/Models/Arrow/Map__55_Normal_Bump.tga
	new file:   target/classes/Models/Ball/Ball.blend
	new file:   target/classes/Models/Ball/Ball.blend1

Delete LICENSE

Update README.md

Update README.md

	new file:   .DS_Store

auto-commit

auto-commit

auto-commit

class update

modified classes

modified classes

auto-commit

removed classes in target for ease of transfer

auto-commit

auto-commit

auto-commit

auto-commit

auto-commit

Add heighmap.png to .gitignore

gitignored

giiiiiitttttt

ignooreeee

added file stream instead of path, work in progres

auto-commit

auto-commit

reworked method for jar

auto-commit

reworked method for jar

reworked method for jar

Track large files using Git LFS

auto-commit

auto-commit

removed target

auto-commit

removed target

Create CODE_OF_CONDUCT.md

Create LICENSE